--- a/cesi-zen-ionic/src/app/pages/profile/profile.page.scss
+++ b/cesi-zen-ionic/src/app/pages/profile/profile.page.scss
@@ -101,3 +101,44 @@
   height: 50px;
   font-weight: 600;
 }
+
+.not-connected-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+  padding: 2rem;
+  text-align: center;
+
+  .not-connected-content {
+    max-width: 400px;
+    width: 100%;
+
+    .large-icon {
+      font-size: 5rem;
+      color: var(--ion-color-medium);
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: var(--ion-color-dark);
+      margin-bottom: 1rem;
+    }
+
+    p {
+      color: var(--ion-color-medium);
+      margin-bottom: 2rem;
+      line-height: 1.5;
+    }
+
+    .login-button {
+      --border-radius: 8px;
+      --padding-top: 1rem;
+      --padding-bottom: 1rem;
+      font-weight: 500;
+    }
+  }
+}
